2001-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Byte-optimize `match-string-no-properties' not to use
	`set-text-properties' under XEmacs.

2001-04-19  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-hns.el (shimbun-close): Define (clean up content-hash).
	(shimbun-article): Avoid an error when article does not exist.
	(shimbun-hns-article): Reload page for article.

2001-04-19  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* shimbun/sb-hns.el (shimbun-get-headers): Generate pseudo time
	using section number of article for sorting by date.

2001-04-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-setup-header-line): Check `major-mode' to decide
	whether header line should be set up.

	* mime-w3m.el (mime-w3m-use-header-line): Removed.
	(mime-w3m-preview-text/html): Canceled last change.

2001-04-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-mode-map): Initialize when source file is loaded.

	* mime-w3m.el (mime-w3m-mode-map): Simplify.

	* mew-w3m.el (TopLevel): Initialization code of `w3m-mode-map' is
	removed.

	* w3m.el, w3m-weather.el, w3m-filter.el, w3m-form.el: Change
	coding-system.

	* mime-w3m.el (mime-w3m-use-header-line): New user option.
	(mime-w3m-preview-text/html): Refer `mime-w3m-use-header-line' to
	control `w3m-use-header-line'.

2001-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist: Made the history management system to keep properties
	of each history element to be shared by all the w3m buffers.
	(w3m-history-remove-properties): Share properties.
	(w3m-history-add-properties): Ditto.
	(w3m-history-plist-put): Ditto.
	(w3m-history-copy, w3m-history-copy-1): Ditto.
	(w3m-history-push): Ditto.
	(w3m-history-assoc): Ditto.
	(w3m-history-share-properties): New function.
	(w3m-history-seek-properties): New function.

	(w3m-history-rename-url): Allow the 4th arg `this-buffer'.
	(w3m-history-with-element): Renamed from
	`w3m-history-with-elements'; bind only the variable `element' to